# utils

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: cmake-linux-build.yml  cmake-multi-platform.yml  cmake-win-build.yml
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  all.hpp  bimap.hpp  bitmask.hpp  bitset.hpp  my_exception.hpp  optional.hpp  source_location.hpp  template_string.hpp
test/: CMakeLists.txt  main.cpp
test/src/: bitmask_test.cpp  optional_test.cpp
