cmake_minimum_required(VERSION 3.20)

project(cmake-utils VERSION 1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")

set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR})

set(UTILS_INSTALL_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
set(UTILS_INSTALL_BIN_DIR ${PROJECT_SOURCE_DIR}/bin)
set(UTILS_INSTALL_LIB_DIR ${PROJECT_SOURCE_DIR}/lib)

set(UTILS_HEADERS_DIR ${PROJECT_SOURCE_DIR}/src/app)

include_directories(${UTILS_INSTALL_INCLUDE_DIR})
include_directories(${UTILS_HEADERS_DIR})

add_subdirectory(src)
add_subdirectory(test)

